aded etts 32faw