@@ -21,6 +21,11 @@ repositories {
     mavenCentral()
 }
 
+test {
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+}
+
+
 dependencies {
     implementation 'org.springframework.vault:spring-vault-core:3.0.4'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
@@ -37,11 +42,20 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-freemarker'
-//	testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.springframework.security:spring-security-test'
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    runtimeOnly 'com.h2database:h2'
+    testCompileOnly 'org.projectlombok:lombok:1.18.30'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
+    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:3.2.3'
+    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+
+    testLogging {
+        events 'passed', 'failed'
+    }
 }
